// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Track Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    <div
      class="undefined root svelte-1bozxge"
    >
      <a
        class="flex-none"
        href="#/album/1"
      >
        <img
          alt="./cover.jpg"
          class="h-16 w-16 text-xs actionable rounded-sm svelte-hn7eai"
          height="256"
          loading="lazy"
          src="./cover.jpg"
          width="256"
        />
         
        
      </a>
       
      <div
        class="track svelte-1bozxge"
      >
        <span
          class="title svelte-1bozxge"
        >
          Mama got a girlfriend
        </span>
         
        <a
          class="text-sm underlined"
          href="#/artist/0"
          onclick="event.stopPropagation()"
        >
          Ben Harper
        </a>
      </div>
       
       
    </div>
  </div>
</section>
`;

exports[`Storyshots Components/Track With Details 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    <div
      class="undefined root svelte-1bozxge"
    >
      <a
        class="flex-none"
        href="#/album/1"
      >
        <img
          alt="./cover.jpg"
          class="h-16 w-16 text-xs actionable rounded-sm svelte-hn7eai"
          height="256"
          loading="lazy"
          src="./cover.jpg"
          width="256"
        />
         
        
      </a>
       
      <div
        class="track svelte-1bozxge"
      >
        <span
          class="title svelte-1bozxge"
        >
          Mama got a girlfriend
        </span>
         
        <a
          class="text-sm underlined"
          href="#/artist/0"
          onclick="event.stopPropagation()"
        >
          Ben Harper
        </a>
      </div>
       
      <div
        class="duration svelte-1bozxge"
      >
        2:06
      </div>
       
    </div>
  </div>
</section>
`;

exports[`Storyshots Components/Track With Menu 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    <div
      class="undefined root svelte-1bozxge"
    >
      <a
        class="flex-none"
        href="#/album/1"
      >
        <img
          alt="./cover.jpg"
          class="h-16 w-16 text-xs actionable rounded-sm svelte-hn7eai"
          height="256"
          loading="lazy"
          src="./cover.jpg"
          width="256"
        />
         
        
      </a>
       
      <div
        class="track svelte-1bozxge"
      >
        <span
          class="title svelte-1bozxge"
        >
          Mama got a girlfriend
        </span>
         
        <a
          class="text-sm underlined"
          href="#/artist/0"
          onclick="event.stopPropagation()"
        >
          Ben Harper
        </a>
      </div>
       
       
      <span
        aria-expanded="false"
        aria-haspopup="menu"
        class="wrapper svelte-dvv38h"
      >
        <button
          class="iconOnly noBorder svelte-1lod44n"
        >
          <i
            class="material-icons svelte-1lod44n"
          >
            more_vert
          </i>
           
           
          
           
        </button>
      </span>
       
      
    </div>
  </div>
</section>
`;
